nltk chp1 - continued

--- a/notebooks/nltk_solutions_ch1.ipynb
+++ b/notebooks/nltk_solutions_ch1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "8e6af9ca",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,10 +161,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "7ea0a08d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Introductory Examples for the NLTK Book ***\n",
+      "Loading text1, ..., text9 and sent1, ..., sent9\n",
+      "Type the name of the text or sentence to view it.\n",
+      "Type: 'texts()' or 'sents()' to list the materials.\n",
+      "text1: Moby Dick by Herman Melville 1851\n",
+      "text2: Sense and Sensibility by Jane Austen 1811\n",
+      "text3: The Book of Genesis\n",
+      "text4: Inaugural Address Corpus\n",
+      "text5: Chat Corpus\n",
+      "text6: Monty Python and the Holy Grail\n",
+      "text7: Wall Street Journal\n",
+      "text8: Personals Corpus\n",
+      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
+     ]
+    }
+   ],
    "source": [
     "from nltk.book import *"
    ]
@@ -1242,9 +1262,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0dcfedc1",
+   "metadata": {},
+   "source": [
+    "#### 20. ◑ What is the difference between the following two tests: `w.isupper()` and `not w.islower()`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "528fb3dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w.isupper() checks if ALL characters are uppercase.\n",
+      "Example: 'WHO'.isupper()=True\n",
+      "not w.islower() check whether ALL characters are NOT lowercase (e.g. at least one is upper or digit or other non-letter character).\n",
+      "Example: not 'Who'.islower()=True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"w.isupper() checks if ALL characters are uppercase.\n",
+    "Example: 'WHO'.isupper()={'WHO'.isupper()}\"\"\")\n",
+    "print(f\"\"\"not w.islower() check whether ALL characters are NOT lowercase (e.g. at least one is upper or digit or other non-letter character).\n",
+    "Example: not 'Who'.islower()={not 'Who'.islower()}\"\"\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dcfedc1",
+   "id": "91222c77",
    "metadata": {},
    "outputs": [],
    "source": []
