nltk ch2 - contd

--- a/notebooks/nltk_solutions_ch2.ipynb
+++ b/notebooks/nltk_solutions_ch2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "8e6af9ca",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,157 +919,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "512e063e",
+   "execution_count": 66,
+   "id": "5f79e78a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "austen-emma.txt\n",
-      "austen-persuasion.txt\n",
-      "austen-sense.txt\n",
-      "bible-kjv.txt\n",
-      "blake-poems.txt\n",
-      "bryant-stories.txt\n",
-      "burgess-busterbrown.txt\n",
-      "carroll-alice.txt\n",
-      "chesterton-ball.txt\n",
-      "chesterton-brown.txt\n",
-      "chesterton-thursday.txt\n",
-      "edgeworth-parents.txt\n",
-      "melville-moby_dick.txt\n",
-      "milton-paradise.txt\n",
-      "shakespeare-caesar.txt\n",
-      "shakespeare-hamlet.txt\n",
-      "shakespeare-macbeth.txt\n",
-      "whitman-leaves.txt\n"
+      "Comparision of texts 'cg46' and 'cd07' from Brown Corpus\n"
      ]
     }
    ],
    "source": [
-    "from nltk.corpus import gutenberg as gb\n",
-    "for fileid in gb.fileids():\n",
-    "    print(fileid)"
+    "text1_name = \"cg46\"\n",
+    "text2_name = \"cd07\"\n",
+    "print(f\"Comparision of texts '{text1_name}' and '{text2_name}' from Brown Corpus\")\n",
+    "\n",
+    "text1 = nltk.Text(brown.words(text1_name))\n",
+    "text2 = nltk.Text(brown.words(text2_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "789472dd",
+   "execution_count": 60,
+   "id": "f8d6c403",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary size - Alice: 3016, Persuasion: 6132\n",
-      "Vocabulary richness - Alice: 0.08841981823512167, Persuasion: 0.062462437990852694\n"
+      "Size of vocabulary for 'cg46' is 764\n",
+      "Size of vocabulary for 'cd07' is 656\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('Mock', 'Turtle'),\n",
-       " ('said', 'Alice'),\n",
-       " ('March', 'Hare'),\n",
-       " ('White', 'Rabbit'),\n",
-       " ('thought', 'Alice'),\n",
-       " ('golden', 'key'),\n",
-       " ('beautiful', 'Soup'),\n",
-       " ('white', 'kid'),\n",
-       " ('good', 'deal'),\n",
-       " ('kid', 'gloves'),\n",
-       " ('Mary', 'Ann'),\n",
-       " ('yer', 'honour'),\n",
-       " ('three', 'gardeners'),\n",
-       " ('play', 'croquet'),\n",
-       " ('Lobster', 'Quadrille'),\n",
-       " ('ootiful', 'Soo'),\n",
-       " ('great', 'hurry'),\n",
-       " ('old', 'fellow'),\n",
-       " ('trembling', 'voice'),\n",
-       " ('poor', 'little')]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "alice = nltk.Text(gb.words(\"carroll-alice.txt\"))\n",
-    "persuasion = nltk.Text(gb.words(\"austen-persuasion.txt\"))\n",
-    "print(f\"Vocabulary size - Alice: {len(set(alice))}, Persuasion: {len(set(persuasion))}\")\n",
-    "print(f\"Vocabulary richness - Alice: {len(set(alice))/len(alice)}, Persuasion: {len(set(persuasion))/len(persuasion)}\")\n",
-    "alice.collocation_list()"
+    "def vocab_size(text):\n",
+    "    return len(set(w.lower() for w in text if w.isalpha()))\n",
+    "\n",
+    "print(f\"Size of vocabulary for '{text1_name}' is {vocab_size(text1)}\")\n",
+    "print(f\"Size of vocabulary for '{text2_name}' is {vocab_size(text2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "a6b573d2",
+   "execution_count": 61,
+   "id": "a137aa4d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Displaying 14 of 14 matches:\n",
-      "e , and had therefore given all the honour and received none : Elizabeth would\n",
-      " herself , with a delicate sense of honour ; but she was as desirous of saving\n",
-      "er father and Elizabeth ; she could honour all the better feelings of her calm\n",
-      "d , were apparently admitted to the honour of being in love with him ; and as \n",
-      "ther sister , or impeaching his own honour , than that he should prefer Henrie\n",
-      "d he , catching the same tone ; \" I honour you !\" And there was silence betwee\n",
-      "o come . That is the fact , upon my honour , Mary knows it is .\" But Mary did \n",
-      "ngs of family attachment and family honour , without pride or weakness ; he li\n",
-      "y Captain Harville . True , upon my honour ! Are not you astonished ? I shall \n",
-      " estate was something , but all the honour of the family he held as cheap as d\n",
-      "tter was a violation of the laws of honour , that no one ought to be judged or\n",
-      "ntion . Miss Elliot was to have the honour of calling on Mrs Musgrove in the c\n",
-      " at my own disposal . I was hers in honour if she wished it . I had been ungua\n",
-      "on of the marriage in the volume of honour . The only one among them , whose o\n"
+      "Vocabulary richness of 'cg46' is 0.38979591836734695\n",
+      "Vocabulary richness of 'cd07' is 0.3293172690763052\n"
      ]
     }
    ],
    "source": [
-    "persuasion.concordance(\"honour\")"
+    "def vocab_richness(text):\n",
+    "    return vocab_size(text)/len([w for w in text if w.isalpha()])\n",
+    "\n",
+    "print(f\"Vocabulary richness of '{text1_name}' is {vocab_richness(text1)}\")\n",
+    "print(f\"Vocabulary richness of '{text2_name}' is {vocab_richness(text2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "151f1be8",
+   "execution_count": 62,
+   "id": "eba31b2b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Displaying 4 of 4 matches:\n",
-      "' m here ! Digging for apples , yer honour !' ' Digging for apples , indeed !'\n",
-      "dow ?' ' Sure , it ' s an arm , yer honour !' ( He pronounced it ' arrum .') '\n",
-      "le window !' ' Sure , it does , yer honour : but it ' s an arm for all that .'\n",
-      " , ' Sure , I don ' t like it , yer honour , at all , at all !' ' Do as I tell\n"
+      "'cg46' belongs to 'belles_lettres' category\n",
+      "'cd07' belongs to 'religion' category\n"
      ]
     }
    ],
    "source": [
-    "alice.concordance(\"honour\")"
+    "for category in brown.categories():\n",
+    "    for fileid in brown.fileids(categories=category):\n",
+    "        if fileid == text1_name:\n",
+    "            print(f\"'{text1_name}' belongs to '{category}' category\")\n",
+    "\n",
+    "        if fileid == text2_name:\n",
+    "            print(f\"'{text2_name}' belongs to '{category}' category\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "2e721581",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In 'cg46 word 'lord' is a persons title. Examples:\n",
+      "Displaying 3 of 3 matches:\n",
+      "he made use of unpublished papers of Lord John Russell and English consular ma\n",
+      "right appeared and seven years later Lord Grey Of The Reform Bill . Of the two\n",
+      "ticularly popular . The biography of Lord Grey is strictly speaking not a biog\n",
+      "\n",
+      "In 'cd07 word 'lord' is God. Examples:\n",
+      "Displaying 10 of 10 matches:\n",
+      "                              `` The Lord is my light and my salvation ; ; who\n",
+      "vation ; ; whom shall I fear ? ? The Lord is the strength of my life ; ; of wh\n",
+      "they have you in their grip : `` The Lord is my light and my salvation ; ; who\n",
+      "vation ; ; whom shall I fear ? ? The Lord is the strength of my life ; ; of wh\n",
+      "ist said in a similar world : `` The Lord is my light and my salvation ; ; who\n",
+      "vation ; ; whom shall I fear ? ? The Lord is the strength of my life ; ; of wh\n",
+      "secret of his faith . First , `` the Lord is my light '' . He lived in a very \n",
+      "is second conception of God : `` The Lord is my salvation '' . He knew that hi\n",
+      " us one more picture of God : `` The Lord is the strength of my life '' . The \n",
+      "e sea Come , behold the works of the Lord , what desolations He hath made in t\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"lord\"\n",
+    "print(f\"In '{text1_name} word '{word}' is a persons title. Examples:\")\n",
+    "text1.concordance(word)\n",
+    "print(f\"\\nIn '{text2_name} word '{word}' is God. Examples:\")\n",
+    "text2.concordance(word)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09cc686a",
+   "id": "1e51843a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"In 'Persuasion' word 'honour' is used as virtue or respect.\")\n",
-    "print(\"In 'Alice' word 'honour' is used a polite\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
