--- a/notebooks/nltk_solutions_ch2.ipynb
+++ b/notebooks/nltk_solutions_ch2.ipynb
@@ -1051,9 +1051,288 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e51843a",
+   "metadata": {},
+   "source": [
+    "#### 10. ◑ Read the BBC News article: UK's Vicky Pollards '*left behind*' http://news.bbc.co.uk/1/hi/education/6173441.stm. The article gives the following statistic about teen language: \"the top 20 words used, including yeah, no, but and like, account for around a third of all words.\" How many word types account for a third of all word tokens, for a variety of text sources? What do you conclude about this statistic? Read more about this on *LanguageLog*, at http://itre.cis.upenn.edu/~myl/languagelog/archives/003993.html."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7b4694c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17 words account for 1/3 of all words in Alice (including stopwords).\n",
+      "67 words account for 1/3 of all words in Alice (excluding stopwords).\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['the',\n",
+       " 'and',\n",
+       " 'to',\n",
+       " 'a',\n",
+       " 'it',\n",
+       " 'she',\n",
+       " 'i',\n",
+       " 'of',\n",
+       " 'said',\n",
+       " 'you',\n",
+       " 'alice',\n",
+       " 'in',\n",
+       " 'was',\n",
+       " 'that',\n",
+       " 'as',\n",
+       " 'her',\n",
+       " 't']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk.corpus import gutenberg as gb\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "eng_stopwords = stopwords.words(\"english\")\n",
+    "\n",
+    "def most_common_words(text, fraction_of_text, excluded_words=[]):\n",
+    "    text_cleaned = [word.lower() for word in text if (word.isalpha() and word.lower() not in excluded_words)]\n",
+    "    text_fqdist = nltk.FreqDist(text_cleaned)\n",
+    "    word_list = []\n",
+    "    word_tally = 0\n",
+    "    fraction_len = len(text_cleaned)*fraction_of_text\n",
+    "    for word, count in text_fqdist.most_common():\n",
+    "        word_list.append(word)\n",
+    "        word_tally += count\n",
+    "        if word_tally > fraction_len:\n",
+    "            break\n",
+    "\n",
+    "    return word_list\n",
+    "alice = gb.words(\"carroll-alice.txt\")\n",
+    "print(f\"{len(most_common_words(alice, 1/3))} words account for 1/3 of all words in Alice (including stopwords).\")\n",
+    "print(f\"{len(most_common_words(alice, 1/3, eng_stopwords))} words account for 1/3 of all words in Alice (excluding stopwords).\")\n",
+    "most_common_words(alice, 1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "078e920a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 words account for 1/3 of all words in 2025 Donald Trump's inaugrual adress (including stopwords).\n",
+      "81 words account for 1/3 of all words in 2025 Donald Trump's inaugrual adress (excluding stopwords).\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['and',\n",
+       " 'the',\n",
+       " 'will',\n",
+       " 'of',\n",
+       " 'to',\n",
+       " 'we',\n",
+       " 'our',\n",
+       " 'a',\n",
+       " 'be',\n",
+       " 'that',\n",
+       " 'i',\n",
+       " 'you',\n",
+       " 'is',\n",
+       " 'in',\n",
+       " 'it',\n",
+       " 'from']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk.corpus import inaugural\n",
+    "trump = inaugural.words(\"2025-Trump.txt\")\n",
+    "print(f\"{len(most_common_words(trump, 1/3))} words account for 1/3 of all words in 2025 Donald Trump's inaugrual adress (including stopwords).\")\n",
+    "print(f\"{len(most_common_words(trump, 1/3, eng_stopwords))} words account for 1/3 of all words in 2025 Donald Trump's inaugrual adress (excluding stopwords).\")\n",
+    "most_common_words(trump, 1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "045c1d30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If we include stopwords they usually account for top most common words. This means that claim from the article isn't that problematic\n",
+      "- it actually matches pattern (simple stop words accounting for top most common words in text) we see in many texts\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\"\"If we include stopwords they usually account for top most common words. This means that claim from the article isn't that problematic\n",
+    "- it actually matches pattern (simple stop words accounting for top most common words in text) we see in many texts\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaa02ef8",
+   "metadata": {},
+   "source": [
+    "#### 11. ◑ Investigate the table of modal distributions and look for other patterns. Try to explain them in terms of your own impressionistic understanding of the different genres. Can you find other closed classes of words that exhibit significant differences across different genres?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b9ffd434",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  can could   may might  must  will \n",
+      "           news    93    86    66    38    50   389 \n",
+      "       religion    82    59    78    12    54    71 \n",
+      "        hobbies   268    58   131    22    83   264 \n",
+      "science_fiction    16    49     4    12     8    16 \n",
+      "        romance    74   193    11    51    45    43 \n",
+      "          humor    16    30     8     8     9    13 \n",
+      "        mystery    42   141    13    57    30    20 \n",
+      "        fiction    37   166     8    44    55    52 \n",
+      "'will' appears often only in 'news' and 'hobbies' categories. This is probably because news include also forecasts\n",
+      "    and description of plausible consquence of events. In literature connected to hobbies 'will' might be connected to result of some activity.\n",
+      "'could' appears often in general fiction (which includes also 'romance' and 'mystery'). 'could' is part of typical language used in fiction literature\n",
+      "    'science_fiction' is odd-one out here probably due to the fact that it is underrepresented.\n",
+      "'can' apears very often in 'hobbies' category. This is because this category precisely discribes what you *can* do.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import brown\n",
+    "cfd = nltk.ConditionalFreqDist(\n",
+    "    (genre, word)\n",
+    "    for genre in brown.categories()\n",
+    "    for word in brown.words(categories=genre)\n",
+    ")\n",
+    "genres = [\"news\", \"religion\", \"hobbies\", \"science_fiction\", \"romance\", \"humor\", \"mystery\", \"fiction\"]\n",
+    "modals = [\"can\", \"could\", \"may\", \"might\", \"must\", \"will\"]\n",
+    "cfd.tabulate(conditions=genres, samples=modals)\n",
+    "print(\"\"\"'will' appears often only in 'news' and 'hobbies' categories. This is probably because news include also forecasts\n",
+    "    and description of plausible consquence of events. In literature connected to hobbies 'will' might be connected to result of some activity.\n",
+    "'could' appears often in general fiction (which includes also 'romance' and 'mystery'). 'could' is part of typical language used in fiction literature\n",
+    "    'science_fiction' is odd-one out here probably due to the fact that it is underrepresented.\n",
+    "'can' apears very often in 'hobbies' category. This is because this category precisely discribes what you *can* do.\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ca3ad1c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 he she  it \n",
+      "           news 451  42 363 \n",
+      "       religion 137  10 264 \n",
+      "        hobbies 155  21 476 \n",
+      "science_fiction 139  36 129 \n",
+      "        romance 702 496 573 \n",
+      "          humor 146  58 162 \n",
+      "        mystery 670 219 515 \n",
+      "        fiction 813 280 458 \n",
+      "'he' apears ofen in most of categories. Only 'hobbies' is rather low since people are not subject of this kind of literature.\n",
+      "'she' appears often (but still less often than 'he') in fiction. Protagonists of romance novels are often women - that's why 'she' is very common pronoun.\n",
+      "      Extreme disproportion of 'he' to 'she' in news category indicates heavy bias towards males as a subjects of news. Women seem to be also rarely mentioned\n",
+      "      in texts from 'religion' category - again pointing to patriarchal culture.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pronouns = [\"he\", \"she\", \"it\"]\n",
+    "cfd.tabulate(conditions=genres, samples=pronouns)\n",
+    "print(\"\"\"'he' apears ofen in most of categories. Only 'hobbies' is rather low since people are not subject of this kind of literature.\n",
+    "'she' appears often (but still less often than 'he') in fiction. Protagonists of romance novels are often women - that's why 'she' is very common pronoun.\n",
+    "      Extreme disproportion of 'he' to 'she' in news category indicates heavy bias towards males as a subjects of news. Women seem to be also rarely mentioned\n",
+    "      in texts from 'religion' category - again pointing to patriarchal culture.\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416c5920",
+   "metadata": {},
+   "source": [
+    "#### 12. ◑ The CMU Pronouncing Dictionary contains multiple pronunciations for certain words. How many distinct words does it contain? What fraction of words in this dictionary have more than one possible pronunciation?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "deef5965",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 123455 distrinct words in CMU Pronouncing Dictionary.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import cmudict\n",
+    "words = [entry[0] for entry in cmudict.entries()]\n",
+    "cmu_vocab = set(words)\n",
+    "print(f\"There are {len(cmu_vocab)} distrinct words in CMU Pronouncing Dictionary.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4b85102b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.07485318537118789 of distinct words in CMU Pronouncing Dictionary has multiple pronounciation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in cmu_vocab:\n",
+    "    words.remove(word)\n",
+    "more_than_one = set(words)\n",
+    "print(f\"{len(more_than_one)/len(cmu_vocab)} of distinct words in CMU Pronouncing Dictionary has multiple pronounciation.\")    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e51843a",
+   "id": "104f2047",
    "metadata": {},
    "outputs": [],
    "source": []
