nltk ch2 - contd

--- a/notebooks/nltk_solutions_ch2.ipynb
+++ b/notebooks/nltk_solutions_ch2.ipynb
@@ -1330,9 +1330,212 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "104f2047",
+   "metadata": {},
+   "source": [
+    "#### 13. ◑ What percentage of noun synsets have no hyponyms? You can get all noun synsets using `wn.all_synsets('n')`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c71c6be4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7967119283931072 of noun synsets has no hyponyms.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import wordnet as wn\n",
+    "\n",
+    "print(f\"{len([synset for synset in wn.all_synsets(\"n\") if not synset.hyponyms()])/len([synset for synset in wn.all_synsets(\"n\")])} of noun synsets has no hyponyms.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23229f4",
+   "metadata": {},
+   "source": [
+    "#### 14. ◑ Define a function `supergloss(s)` that takes a synset `s` as its argument and returns a string consisting of the concatenation of the definition of `s`, and the definitions of all the hypernyms and hyponyms of `s`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "aba52385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car = wn.synsets('car')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4fdfed97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def supergloss(s):\n",
+    "    entry = f\"{s.name()}: {s.definition()}\"\n",
+    "    if s.hypernyms():\n",
+    "        entry += \"\\nhypernyms:\"\n",
+    "        for hypernym in s.hypernyms():\n",
+    "            entry += f\"\\n\\t-{hypernym.name()}: {hypernym.definition()}\"\n",
+    "    if s.hyponyms():\n",
+    "        entry += \"\\nhyponyms:\"\n",
+    "        for hyponym in s.hyponyms():\n",
+    "            entry += f\"\\n\\t-{hyponym.name()}: {hyponym.definition()}\"\n",
+    "\n",
+    "    return entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e0e5a371",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car.n.01: a motor vehicle with four wheels; usually propelled by an internal combustion engine\n",
+      "hypernyms:\n",
+      "\t-motor_vehicle.n.01: a self-propelled wheeled vehicle that does not run on rails\n",
+      "hyponyms:\n",
+      "\t-beach_wagon.n.01: a car that has a long body and rear door with space behind rear seat\n",
+      "\t-coupe.n.01: a car with two doors and front seats and a luggage compartment\n",
+      "\t-pace_car.n.01: a high-performance car that leads a parade of competing cars through the pace lap and then pulls off the course\n",
+      "\t-stanley_steamer.n.01: a steam-powered automobile\n",
+      "\t-jeep.n.01: a car suitable for traveling over rough terrain\n",
+      "\t-electric.n.01: a car that is powered by electricity\n",
+      "\t-loaner.n.02: a car that is lent as a replacement for one that is under repair\n",
+      "\t-hot_rod.n.01: a car modified to increase its speed and acceleration\n",
+      "\t-minicar.n.01: a car that is even smaller than a subcompact car\n",
+      "\t-compact.n.03: a small and economical car\n",
+      "\t-cruiser.n.01: a car in which policemen cruise the streets; equipped with radiotelephonic communications to headquarters\n",
+      "\t-hatchback.n.01: a car having a hatchback door\n",
+      "\t-sedan.n.01: a car that is closed and that has front and rear seats and two or four doors\n",
+      "\t-sports_car.n.01: a small low car with a high-powered engine; usually seats two persons\n",
+      "\t-hardtop.n.01: a car that resembles a convertible but has a fixed rigid top\n",
+      "\t-stock_car.n.01: a car kept in dealers' stock for regular sales\n",
+      "\t-model_t.n.01: the first widely available automobile powered by a gasoline engine; mass-produced by Henry Ford from 1908 to 1927\n",
+      "\t-cab.n.03: a car driven by a person whose job is to take passengers where they want to go in exchange for money\n",
+      "\t-racer.n.02: a fast car that competes in races\n",
+      "\t-minivan.n.01: a small box-shaped passenger van; usually has removable seats; used as a family car\n",
+      "\t-limousine.n.01: large luxurious car; usually driven by a chauffeur\n",
+      "\t-used-car.n.01: a car that has been previously owned; not a new car\n",
+      "\t-bus.n.04: a car that is old and unreliable\n",
+      "\t-sport_utility.n.01: a high-performance four-wheel drive car built on a truck chassis\n",
+      "\t-horseless_carriage.n.01: an early term for an automobile\n",
+      "\t-ambulance.n.01: a vehicle that takes people to and from hospitals\n",
+      "\t-roadster.n.01: an open automobile having a front seat and a rumble seat\n",
+      "\t-convertible.n.01: a car that has top that can be folded or removed\n",
+      "\t-gas_guzzler.n.01: a car with relatively low fuel efficiency\n",
+      "\t-subcompact.n.01: a car smaller than a compact car\n",
+      "\t-touring_car.n.01: large open car seating four with folding top\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(supergloss(car[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c195541",
+   "metadata": {},
+   "source": [
+    "#### 15. ◑ Write a program to find all words that occur at least three times in the Brown Corpus."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5d66186a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import brown\n",
+    "\n",
+    "words = list(brown.words())\n",
+    "\n",
+    "vocab_1 = set(words)\n",
+    "for word in vocab_1:\n",
+    "    words.remove(word)\n",
+    "print(\"Double words removed\")\n",
+    "\n",
+    "vocab_2 = set(words)\n",
+    "for word in vocab_2:\n",
+    "    words.remove(word)\n",
+    "print(\"Triple words removed\")\n",
+    "\n",
+    "vocab_3 = set(words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d15fd65c",
+   "metadata": {},
+   "source": [
+    "#### 16. ◑ Write a program to generate a table of lexical diversity scores (i.e. token/type ratios), as we saw in [1.1](https://www.nltk.org/book/ch01.html#tab-brown-types). Include the full set of Brown Corpus genres (`nltk.corpus.brown.categories()`). Which genre has the lowest diversity (greatest number of tokens per type)? Is this what you would have expected?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "21d6326f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category           | lexical diversity\n",
+      "-------------------|------------------\n",
+      "adventure          | 0.1280\n",
+      "belles_lettres     | 0.1064\n",
+      "editorial          | 0.1605\n",
+      "fiction            | 0.1358\n",
+      "government         | 0.1167\n",
+      "hobbies            | 0.1449\n",
+      "humor              | 0.2313\n",
+      "learned            | 0.0927\n",
+      "lore               | 0.1315\n",
+      "mystery            | 0.1221\n",
+      "news               | 0.1431\n",
+      "religion           | 0.1618\n",
+      "reviews            | 0.2119\n",
+      "romance            | 0.1207\n",
+      "science_fiction    | 0.2234\n"
+     ]
+    }
+   ],
+   "source": [
+    "def lexical_diversity(text):\n",
+    "    return len(set(text)) / len(text)\n",
+    "\n",
+    "length = 0\n",
+    "for category in brown.categories():\n",
+    "    if len(category) > length:\n",
+    "        length = len(category)\n",
+    "print(f\"{'Category'.ljust(length + 4)}| lexical diversity\")\n",
+    "print(\"-\"*(length+4)+\"|\"+\"-\"*len(\" lexical diversity\"))\n",
+    "for category in brown.categories():\n",
+    "    print(f\"{category.ljust(length + 4)}| {lexical_diversity(brown.words(categories=category)):.4f}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104f2047",
+   "id": "48d2ce7e",
    "metadata": {},
    "outputs": [],
    "source": []
