append previous commit

--- a/notebooks/BH_exact_diag.ipynb
+++ b/notebooks/BH_exact_diag.ipynb
@@ -17,12 +17,12 @@
     "\n",
     "1D [Bose-Hubbard model](https://en.wikipedia.org/wiki/Bose%E2%80%93Hubbard_model) Hamiltonian has a following form:\n",
     "$$\n",
-    "\\hat{H} = J\\sum_i\\left(\\hat{a}^\\dag_{i+1}\\hat{a}_i + h.c.\\right) + \\frac{U}{2}\\sum_i\\left(\\hat{n}_i-1\\right)\\hat{n}_i\n",
+    "\\hat{H} = J\\sum_i\\left(\\hat{a}^\\dagger_{i+1}\\hat{a}_i + h.c.\\right) + \\frac{U}{2}\\sum_i\\left(\\hat{n}_i-1\\right)\\hat{n}_i\n",
     "$$\n",
     "where\n",
     "- $J$ - hopping integral\n",
     "- $U$ - on-site interaction\n",
-    "- $\\hat{a}^\\dag_i$, $\\hat{a}_i$, $\\hat{n}_i$ - creation, annihilation and particle number operators for site $i$\n",
+    "- $\\hat{a}^\\dagger_i$, $\\hat{a}_i$, $\\hat{n}_i$ - creation, annihilation and particle number operators for site $i$\n",
     "\n",
     "For large $U$ it describes Mott-insulator, for large $J$ it describes superfluid. For simplicity we will express energy in units of $U$, so the hopping will become $J/U$ and on-site interaction will be $1$.\n",
     "\n",
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1352078it [00:02, 639358.57it/s]\n"
+      "1352078it [00:02, 645199.50it/s]\n"
      ]
     },
     {
@@ -162,8 +162,8 @@
    "source": [
     "### Hashing trick\n",
     "As proposed in the paper, I will use hashing function\n",
-    "$$T(v)=\\sum\\limits_{i=1}^M\\sqrt{100\\cdot i +3}\\cdot A_{iv}$$\n",
-    "where $A_{iv}$ is occupation matrix `states`"
+    "$$T(v)=\\sum\\limits_{i=1}^M\\sqrt{100\\cdot i +3}\\cdot A_{vi}$$\n",
+    "where $A_{vi}$ is occupation matrix `states`"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "metadata": {},
    "source": [
     "### Kinetic part of the Hamiltonian\n",
-    "- `values` - result of application of $\\hat{a}^\\dag_{i+1}\\hat{a}_i$\n",
+    "- `values` - result of application of $\\hat{a}^\\dagger_{i+1}\\hat{a}_i$\n",
     "- `idx_u` - indices of rows\n",
     "- `idx_v` - indices of columns\n",
     "- Non-zero elements of are determined by $i$. For each $i$ we can process whole `states` matrix at once leaving only non-zero elements for this given $i$.\n",
@@ -211,7 +211,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [00:00<00:00, 117.95it/s]\n"
+      "100%|██████████| 12/12 [00:00<00:00, 110.14it/s]\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x726b8a541310>"
+       "<matplotlib.lines.Line2D at 0x781b9e3311d0>"
       ]
      },
      "execution_count": 8,
@@ -324,10 +324,10 @@
    "source": [
     "## Calculations\n",
     "Groundstate energy alone doesn't give us much information about the system (by itself). That's why we calculate density matrix \n",
-    "$$\\rho_{i,j} = \\langle G\\mid \\hat{a}^\\dag_{i}\\hat{a}_j\\mid G \\rangle$$\n",
-    "where $\\mid G\\rangle$ is groundstate eigenvector.\n",
+    "$$\\rho_{i,j} = \\langle G| \\hat{a}^\\dagger_{i}\\hat{a}_j| G \\rangle$$\n",
+    "where $| G\\rangle$ is groundstate eigenvector.\n",
     "\n",
-    "Function `density_matrix` uses the same tricks as process of building kinetic part of the Hamiltonian. The only additional thing to note is that from the bra vector $\\langle G\\mid$ we need to choose states that have the same configuration as states in $\\hat{a}^\\dag_{i}\\hat{a}_j\\mid G \\rangle$. We get indices of those states efficiently by using hashing function in `get_state_idx` method.\n",
+    "Function `density_matrix` uses the same tricks as process of building kinetic part of the Hamiltonian. The only additional thing to note is that from the bra vector $\\langle G|$ we need to choose states that have the same configuration as states in $\\hat{a}^\\dagger_{i}\\hat{a}_j| G \\rangle$. We get indices of those states efficiently by using hashing function in `get_state_idx` method.\n",
     "\n",
     "Using density matrix we can calculate condensate fraction\n",
     "$$\n",
@@ -363,7 +363,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [01:30<00:00,  1.81s/it]\n"
+      "100%|██████████| 50/50 [01:30<00:00,  1.80s/it]\n"
      ]
     }
    ],
