--- a/notebooks/BH_exact_diag.ipynb
+++ b/notebooks/BH_exact_diag.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "1D [Bose-Hubbard model](https://en.wikipedia.org/wiki/Bose%E2%80%93Hubbard_model) Hamiltonian has a following form:\n",
     "$$\n",
-    "\\hat{H} = J\\sum_i\\left(\\hat{a}^\\dagger_{i+1}\\hat{a}_i + h.c.\\right) + \\frac{U}{2}\\sum_i\\left(\\hat{n}_i-1\\right)\\hat{n}_i\n",
+    "\\hat{H} = -J\\sum_i\\left(\\hat{a}^\\dagger_{i+1}\\hat{a}_i + h.c.\\right) + \\frac{U}{2}\\sum_i\\left(\\hat{n}_i-1\\right)\\hat{n}_i\n",
     "$$\n",
     "where\n",
     "- $J$ - hopping integral\n",
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1352078it [00:02, 645199.50it/s]\n"
+      "1352078it [00:02, 645884.66it/s]\n"
      ]
     },
     {
@@ -211,7 +211,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [00:00<00:00, 110.14it/s]\n"
+      "100%|██████████| 12/12 [00:00<00:00, 110.54it/s]\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x781b9e3311d0>"
+       "<matplotlib.lines.Line2D at 0x71dd34d2d310>"
       ]
      },
      "execution_count": 8,
@@ -363,20 +363,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [01:30<00:00,  1.80s/it]\n"
+      "100%|██████████| 50/50 [01:25<00:00,  1.71s/it]\n"
      ]
     }
    ],
    "source": [
     "J_min = 0\n",
     "J_max = 1\n",
-    "J_len = 50  # number of unique values of U in the range\n",
+    "J_len = 50  # number of unique values of J in the range\n",
     "\n",
     "J_vals = cp.linspace(J_min, J_max, num=J_len)\n",
     "f_c = cp.zeros_like(J_vals)\n",
     "\n",
     "for i, J in enumerate(tqdm(J_vals)):\n",
-    "    _, vec = eigsh(H_int + J * H_kin, k=1, which=\"SA\", return_eigenvectors=True)\n",
+    "    _, vec = eigsh(-J * H_kin + H_int, k=1, which=\"SA\", return_eigenvectors=True)\n",
     "    rho = density_matrix(vec)\n",
     "    lamb = cp.linalg.eigvalsh(rho)[-1]\n",
     "    f_c[i] = lamb / N"
