--- a/notebooks/BH_exact_diag.ipynb
+++ b/notebooks/BH_exact_diag.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "D_1 = comb(M, N-1, exact=True, repetition=True) # number of states with non-zero number of particles at site i (each site is the same due to translational invariance)\n",
     "next_site = cp.array([i + 1 for i in range(M)], dtype=int) # neet trick for getting next neighbours and periodic boundary conditions\n",
-    "next_site[M - 1] = 0\n",
+    "next_site[-1] = 0\n",
     "\n",
     "mempool = cp.get_default_memory_pool() # to be able to remove some redundant variables from GPU memory (running on CPU comment this line)"
    ]
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f62eced7",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1352078it [00:02, 645884.66it/s]\n"
+      "1352078it [00:02, 672346.65it/s]\n"
      ]
     },
     {
@@ -211,7 +211,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [00:00<00:00, 110.54it/s]\n"
+      "100%|██████████| 12/12 [00:00<00:00, 109.97it/s]\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x71dd34d2d310>"
+       "<matplotlib.lines.Line2D at 0x7649bc92d1d0>"
       ]
      },
      "execution_count": 8,
@@ -349,7 +349,7 @@
     "    for i, j in product(range(M), range(M)):\n",
     "        coef = cp.sqrt((states[non_zero[j], i] + 1) * states[non_zero[j], j])\n",
     "        idx = get_state_idx(states[non_zero[j]] - unit[j] + unit[i])\n",
-    "        rho[i, j] = vec[idx, 0] @ (coef * vec[non_zero[j], 0])\n",
+    "        rho[i, j] = vec[idx] @ (coef * vec[non_zero[j]])\n",
     "    return rho"
    ]
   },
@@ -363,7 +363,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [01:25<00:00,  1.71s/it]\n"
+      "100%|██████████| 50/50 [01:25<00:00,  1.72s/it]\n"
      ]
     }
    ],
@@ -377,7 +377,7 @@
     "\n",
     "for i, J in enumerate(tqdm(J_vals)):\n",
     "    _, vec = eigsh(-J * H_kin + H_int, k=1, which=\"SA\", return_eigenvectors=True)\n",
-    "    rho = density_matrix(vec)\n",
+    "    rho = density_matrix(vec[:, 0])\n",
     "    lamb = cp.linalg.eigvalsh(rho)[-1]\n",
     "    f_c[i] = lamb / N"
    ]
