--- a/notebooks/BH_phase_diagram.ipynb
+++ b/notebooks/BH_phase_diagram.ipynb
@@ -77,7 +77,7 @@
     "\\end{split}\n",
     "$$\n",
     "This means that in order to find line of phase transition between superfluid and Mott insulator with given particle number we need to find only lowest eigenvalue of three $\\hat{h}$ matrices with $N$, $N+1$ and $N-1$ for each value of $J$.\n",
-    "In finite systems (finite $M$) this method maybe not accurate in some regions of phase diagram.\n",
+    "In finite systems (finite $M$) this method maybe not accurate in some regions of phase diagram. It is described in detail in [Cold bosons in optical lattices: a tutorial for Exact Diagonalization](https://arxiv.org/abs/1410.7280) by Raventós *et al*.\n",
     "\n",
     "As usual we will express all energies in units of $U$ (equivalent to setting $U=1$).\n",
     "\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c6afafae",
    "metadata": {},
    "outputs": [],
