some bug squashing

--- a/notebooks/kato_expansion.ipynb
+++ b/notebooks/kato_expansion.ipynb
@@ -34,7 +34,7 @@
     "$$\n",
     "\n",
     "### Perturbation theory - Kato expansion\n",
-    "Instead of using standard, [recursive way](https://en.wikipedia.org/wiki/Perturbation_theory_(quantum_mechanics)) of caluculating each order of expansion we can use *Kato perturbation theory*. Details can be found here:\n",
+    "Instead of using standard, [recursive way](https://en.wikipedia.org/wiki/Perturbation_theory_%28quantum_mechanics%29) of calculating each order of expansion we can use *Kato perturbation theory*. Details can be found here:\n",
     "- [Perturbation Theory for Linear Operators - Tosio Kato](https://webhomes.maths.ed.ac.uk/~v1ranick/papers/kato1.pdf) - heavy math\n",
     "- [Quantum Mechanics Vol II - Albert Messiah](https://www.slideshare.net/slideshow/messiah-quantum-mechanics-volume-ii/41304554#114) - reasonable derivation (Chapter XVI, Section III page 712)\n",
     "- [Critical properties of the  Bose-Hubbard model - Dennis Hinrichs](http://users.physik.fu-berlin.de/~pelster/Theses/hinrichs.pdf) - PhD thesis with nice derivation\n",
@@ -285,7 +285,7 @@
    "source": [
     "## Sanity check\n",
     "\n",
-    "First five orders can be checked against [wikipedia](https://en.wikipedia.org/wiki/Perturbation_theory_(quantum_mechanics)#Second-order_and_higher-order_corrections:~:text=Corrections%20to%20fifth%20order%20(energies)%20and%20fourth%20order%20(states)%20in%20compact%20notation) (click `[show]` on the website).\n",
+    "First five orders can be checked against [wikipedia](https://en.wikipedia.org/wiki/Perturbation_theory_%28quantum_mechanics%29#Second-order_and_higher-order_corrections) (click `[show]` on the website).\n",
     "\n",
     "- Correction for non-degenerate eigenvalue $E_l^{(0)}$ ($l$ for nicer presentation in `SymPy`)\n",
     "- Each term has implicit sum over all appearing $m_i$\n",
