--- a/notebooks/kato_expansion.ipynb
+++ b/notebooks/kato_expansion.ipynb
@@ -5,7 +5,7 @@
    "id": "c0eb323d",
    "metadata": {},
    "source": [
-    "# Perturbation theory - quantum mechanics (or other eigenvalue problems)"
+    "# Perturbation theory - quantum mechanics (and other eigenvalue problems)"
    ]
   },
   {
