--- a/notebooks/kato_expansion.ipynb
+++ b/notebooks/kato_expansion.ipynb
@@ -95,7 +95,7 @@
     "$$\n",
     "\\sum_{l=1}^s \\alpha_l \\geq s \\text{ where } s\\in\\{1,2,3,\\dots,\\nu-1\\} \\tag{5}\n",
     "$$\n",
-    "In Eq.(3) many terms will give the same contributions. To determine unique terms we can first simplify notation by representing terms in Eq.(3) by sequence $\\{\\alpha_l\\}:\n",
+    "In Eq.(3) many terms will give the same contributions. To determine unique terms we can first simplify notation by representing terms in Eq.(3) by sequence $\\{\\alpha_l\\}$:\n",
     "$$\n",
     "\\langle n|\\hat{V}\\hat{S}_{0}\\hat{V}\\hat{S}_{1}\\hat{V}\\hat{S}_{2}\\hat{V} |n \\rangle = (210)\n",
     "$$\n",
