--- a/notebooks/catboost_json.ipynb
+++ b/notebooks/catboost_json.ipynb
@@ -2400,7 +2400,7 @@
     "\n",
     "Now that all splits are turned into numerical, and we know how to turn them into binary decision vector, we can recalculate prediction.\n",
     "\n",
-    "Tree ensemble models simply sum up leaf values of all the trees, possibly scale them and add bias. For classifier models raw predict output is in log-odds space because it is additive. To get mor intuitive probability output it needs to be passed through `expit` function.\n",
+    "Tree ensemble models simply sum up leaf values of all the trees, possibly scale them and add bias. For classifier model's raw prediction output is in log-odds space (because log-odds space is additive). To get more intuitive probability output raw prediction needs to be passed through `expit` function.\n",
     "\n",
     "Here is a function that recalculates prediction based on expanded `model_json` structure and extracted CTR features."
    ]
@@ -2466,12 +2466,6 @@
    "source": [
     "The prediction matches exactly!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5edb6cd6",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
